# ImageProcessModule

./: CMakeLists.txt  README.md
imageProcessAlgor/: CMakeLists.txt  autoAdjustQuality.cpp  autoAdjustQuality.h  cutBaseLineDetection.cpp  cutBaseLineDetection.h  cutImageAlgr.cpp  cutImageAlgr.h  cutTraceDetection.cpp  cutTraceDetection.h  cutTraceValidation.cpp  cutTraceValidation.h  pixelSizeMeter.cpp  pixelSizeMeter.h  rotateTransform.cpp  rotateTransform.h  templateMatcher.cpp  templateMatcher.h
sample/: CMakeLists.txt  unit_test.cpp
